--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,6 @@
 DEBUG=0
 SECRET_KEY=django-insecure-cj7(5o%_1*txm)4e8(g5+79$kw%g=xwy@lp8an3*$@uxmzwk$g
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_ALLOWED_HOSTS=80.78.240.54 localhost 127.0.0.1 [::1]
 
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=django_rest_prod
